--- a/translations/forum+intl-icu.fr.xlf
+++ b/translations/forum+intl-icu.fr.xlf
@@ -33,7 +33,7 @@
     </unit>
     <unit id="WdY9GGc" name="rps">
       <notes>
-        <note category="german">rps</note>
+        <note category="german">ssp</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
       </notes>
       <segment>
@@ -43,8 +43,8 @@
     </unit>
     <unit id="s6GYS6C" name="coin">
       <notes>
-        <note category="german">coin</note>
-        <note category="from">twig:///templates/ajax/forum/editor.html.twig</note>
+        <note category="german">mw</note>
+        <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
       </notes>
       <segment>
         <source>coin</source>
@@ -53,7 +53,7 @@
     </unit>
     <unit id="g2fNZv3" name="card">
       <notes>
-        <note category="german">card</note>
+        <note category="german">skat</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
       </notes>
       <segment>
@@ -63,9 +63,8 @@
     </unit>
     <unit id="nl5DrDJ" name="rnduser">
       <notes>
-        <note category="german">rnduser</note>
+        <note category="german">spieler</note>
         <note category="from">twig:///templates/ajax/forum/editor.html.twig;twig:///templates/ajax/help/roleplay_options.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>rnduser</source>
