--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -14646,5 +14646,11 @@
         <target>Löschen</target>
       </segment>
     </unit>
+    <unit id="5JJ5qLV" name="Meine persönliche Nachricht ändern">
+      <segment>
+        <source>Meine persönliche Nachricht ändern</source>
+        <target>Meine persönliche Nachricht ändern</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
