--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -23064,5 +23064,16 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Meine persönliche Nachricht ändern</target>
       </segment>
     </unit>
+    <unit id="sVxXfQu" name="Einen Aufstand der Verbannten vorbereiten (optional).">
+      <notes>
+        <note category="german">Einen Aufstand der Verbannten vorbereiten (optional).</note>
+        <note category="from">twig:///templates/ajax/game/town/dashboard.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Einen Aufstand der Verbannten vorbereiten (optional).</source>
+        <target>Einen Aufstand der Verbannten vorbereiten (optional).</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
