--- a/translations/login+intl-icu.es.xlf
+++ b/translations/login+intl-icu.es.xlf
@@ -823,5 +823,27 @@
         <target>Tienes que esperar 5 minutos antes de poder enviar otro correo electrónico. Mientras tanto, compruebe si es posible que el correo haya terminado en su carpeta de correo no deseado.</target>
       </segment>
     </unit>
+    <unit id="1zpAcv.">
+      <notes>
+        <note category="german">Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</note>
+        <note category="from">php:///src/Controller/PublicController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</source>
+        <target>Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</target>
+      </segment>
+    </unit>
+    <unit id="OUS.MDw">
+      <notes>
+        <note category="german">Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</note>
+        <note category="from">php:///src/Controller/PublicController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</source>
+        <target>Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
