--- a/translations/login+intl-icu.fr.xlf
+++ b/translations/login+intl-icu.fr.xlf
@@ -819,5 +819,27 @@
         <target>Vous devez attendre au moins 5 minutes avant de renvoyer l'email de validation. Veuillez vérifier votre dans le dossier spam en attendant.</target>
       </segment>
     </unit>
+    <unit id="1zpAcv.">
+      <notes>
+        <note category="german">Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</note>
+        <note category="from">php:///src/Controller/PublicController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</source>
+        <target>Du hast deinen Anzeigenamen auf EternalTwin geändert. Wir haben diese Änderung soeben für dich übernommen!</target>
+      </segment>
+    </unit>
+    <unit id="OUS.MDw">
+      <notes>
+        <note category="german">Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</note>
+        <note category="from">php:///src/Controller/PublicController.php</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</source>
+        <target>Dein EternalTwin-Benutzername enthält Elemente, die auf MyHordes nicht gestattet sind. Bitte ändere deinen Namen auf EternalTwin, um dich auf MyHordes anmelden zu können.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
