Added missing EN translation in the help

--- a/translations/help+intl-icu.en.xlf
+++ b/translations/help+intl-icu.en.xlf
@@ -8343,7 +8343,7 @@ Alle Seelenpunkte, die mit einer gelöschten Stadt erspielt wurden, gehen ebenso
       </notes>
       <segment>
         <source>Allgemeine Regeln</source>
-        <target>Allgemeine Regeln</target>
+        <target>General Rules</target>
       </segment>
     </unit>
     <unit id="7b2MzR_">
