EN Translation for failed search

--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -119,7 +119,7 @@
       </notes>
       <segment>
         <source>Trotz intensiver Suche hast du nichts verwertbares gefunden...</source>
-        <target>Trotz intensiver Suche hast du nichts verwertbares gefunden...</target>
+        <target>After exhaustive searching, the only thing you have discovered is the emptiness of wasted time...</target>
       </segment>
     </unit>
     <unit id="23PgQVZ" name="Ration Wasser">
